--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,9 +1,9 @@
-Flask
-flask_restful
-pymongo
-bcrypt
-numpy
-tensorflow
-requests
-keras
-pillow
+Flask==2.0.3
+flask_restful==0.3.9
+pymongo==4.3.3
+bcrypt==4.0.1
+numpy==1.23.5
+tensorflow==2.11.0
+requests==2.28.2
+keras==2.11.0
+Pillow==9.5.0
