--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.0.3
-flask_restful==0.3.9
-pymongo==4.3.3
+Flask==2.3.3
+Flask-RESTful==0.3.10
+Werkzeug==2.3.7
+pymongo==4.5.0
 bcrypt==4.0.1
-numpy==1.23.5
-tensorflow==2.11.0
-requests==2.28.2
-keras==2.11.0
-Pillow==9.5.0
+numpy==1.24.3
+requests==2.31.0
+tensorflow==2.13.0
+Keras==2.13.1
+Pillow==10.0.1
