--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -5,6 +5,5 @@ pymongo==4.5.0
 bcrypt==4.0.1
 numpy==1.24.3
 requests==2.31.0
-tensorflow==2.13.0
-Keras==2.13.1
+tensorflow-cpu==2.13.0
 Pillow==10.0.1
