--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,25 @@ services:
       - 5000:5000
     depends_on:
       - db
+    networks:
+      - app-network
+
   db:
     build: ./db
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - web
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
